fix(Styling): OZF-898 Fix unecessary scrollbar on discovery page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -207,7 +207,7 @@ div.modal-header > button.close {
 @import "../../bower_components/ozp-classification/classification.css";
 
 body{
-    margin-top:20px;
+    padding-top: 20px;
 }
 body > div.classBanner:first-of-type {
     position: fixed;
